--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,16 +1,12 @@
 {
-  "orgName": "DreamHouse Realty",
+  "orgName": "Dreamhouse",
   "edition": "Developer",
   "features": [],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
     },
-    "securitySettings": {
-      "passwordPolicies": {
-        "enableSetPasswordInApi": true
-      }
-    },
+   
     "mobileSettings": {
       "enableS1EncryptedStoragePref2": false
     }
